chore: update image

--- a/cdktf-examples/tutorial-snippets-java.mdx
+++ b/cdktf-examples/tutorial-snippets-java.mdx
@@ -170,3 +170,14 @@ app
 
 No outputs found.
 ```
+
+```diff
+                new SimpleKubernetesWebApp(this, "app_frontend", new SimpleKubernetesWebAppConfig()
+-                               .setImage("nginx:latest")
++                               .setImage("localhost:5000/nocorp-frontend:latest")
+                                .setReplicas(3)
+                                .setApp("myapp")
+                                .setComponent("frontend")
+                                .setEnvironment("dev")
+                                .setPort(30001));
+```
